[gd_scene load_steps=8 format=3 uid="uid://dfatuuvqiis6s"]

[ext_resource type="Script" uid="uid://boxtctkgdy7sh" path="res://minigames/jp_lesson/jp_lesson.gd" id="1_113pt"]
[ext_resource type="Texture2D" uid="uid://bhagleuf36c6p" path="res://minigames/jp_lesson/bg/open-graph-paper-notebook.png" id="2_8vdo8"]
[ext_resource type="Theme" uid="uid://bvbnuvj1fp6eu" path="res://minigames/jp_lesson/jp_diag_theme.tres" id="3_1ojgs"]
[ext_resource type="PackedScene" uid="uid://sfmgup06nvhq" path="res://minigames/jp_lesson/states/state_manager.tscn" id="3_ytygp"]
[ext_resource type="FontFile" uid="uid://ccinyqano2qsr" path="res://fonts/AlpenFontFree.otf" id="5_8vdo8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs0uv"]
size = Vector2(363, 5)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dyycs"]

[node name="JapaneseLesson" type="Node2D"]
script = ExtResource("1_113pt")

[node name="notebook_bg" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -18.0
offset_right = 975.0
offset_bottom = 554.0
texture = ExtResource("2_8vdo8")
expand_mode = 1

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(708, 45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2(15.5, -30.5)
shape = SubResource("RectangleShape2D_fs0uv")

[node name="floor" type="StaticBody2D" parent="." groups=["floor"]]
position = Vector2(239, -44)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(479, 540)
shape = SubResource("WorldBoundaryShape2D_dyycs")

[node name="reload" type="Button" parent="."]
offset_left = 123.0
offset_top = 56.0
offset_right = 181.0
offset_bottom = 87.0
text = "reload"

[node name="diag_tutorial0" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "How to Play"
initial_position = 1
size = Vector2i(300, 120)
unresizable = true
always_on_top = true
theme = ExtResource("3_1ojgs")
dialog_text = "Click on the white blocks to learn a character"
dialog_autowrap = true

[node name="diag_tutorial1" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "How to Play"
initial_position = 1
size = Vector2i(300, 120)
unresizable = true
always_on_top = true
dialog_text = "Nice! You've learned that „ÅÇ is equivalent to A"
dialog_autowrap = true

[node name="diag_tutorial2" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "How to Play"
initial_position = 1
size = Vector2i(300, 120)
unresizable = true
always_on_top = true
dialog_text = "You got it! Keep going!"
dialog_autowrap = true

[node name="StateManager" parent="." instance=ExtResource("3_ytygp")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 23.0
offset_top = 483.0
offset_right = 151.0
offset_bottom = 523.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8vdo8")
theme_override_font_sizes/font_size = 32
text = "score:"

[node name="lbscore" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8vdo8")
theme_override_font_sizes/font_size = 32

[node name="alert" type="ColorRect" parent="."]
visible = false
offset_left = 324.0
offset_top = 180.0
offset_right = 640.0
offset_bottom = 337.0

[node name="lb_alert" type="Label" parent="alert"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "oi"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_alert" type="Button" parent="alert"]
layout_mode = 0
offset_left = 283.0
offset_top = 8.0
offset_right = 307.0
offset_bottom = 39.0
text = "x"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 49.0
offset_top = 158.0
offset_right = 395.0
offset_bottom = 372.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_8vdo8")
theme_override_font_sizes/normal_font_size = 32
text = "You've learned!"

[connection signal="pressed" from="reload" to="." method="_on_reload_pressed"]
[connection signal="confirmed" from="diag_tutorial0" to="StateManager" method="_on_diag_tutorial0_confirmed"]
[connection signal="confirmed" from="diag_tutorial1" to="StateManager" method="_on_diag_tutorial1_confirmed"]
[connection signal="confirmed" from="diag_tutorial2" to="StateManager" method="_on_diag_tutorial2_confirmed"]
[connection signal="pressed" from="alert/btn_alert" to="StateManager" method="_on_btn_alert_pressed"]
